language/move-lang/tests/move_check/typing/pack_unit.exp
error: 

   ┌── tests/move_check/typing/pack_unit.move:5:9 ───
   │
 5 │         Box { f: () };
   │         ^^^^^^^^^^^^^ Invalid type argument
   │                  -- Expected a single non-reference type, but found: '()'
   │

